[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Levels/Level1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Screens/Themes/TaylorGothic.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Screens/Themes/medieval_button.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/Screens/MainScreen.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Screens/StartButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Screens/Menu.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 72
font_data = ExtResource( 2 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level1" parent="." instance=ExtResource( 1 )]
menu_presentation = true

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -236.0
margin_right = 128.0
margin_bottom = -124.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.905882, 0.0980392, 0.0980392, 1 )
text = "Joust"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -108.0
margin_right = 134.0
margin_bottom = 116.0

[node name="Start" parent="Menu" instance=ExtResource( 5 )]
margin_right = 262.0
margin_bottom = 53.0

[node name="Scores" type="Button" parent="Menu"]
margin_top = 57.0
margin_right = 262.0
margin_bottom = 110.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Scores"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="Button" parent="Menu"]
margin_top = 114.0
margin_right = 262.0
margin_bottom = 167.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="Menu"]
margin_top = 171.0
margin_right = 262.0
margin_bottom = 224.0
size_flags_vertical = 3
theme = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="button_up" from="Menu/Scores" to="." method="_on_Scores_button_up"]
[connection signal="button_up" from="Menu/Credits" to="." method="_on_Credits_button_up"]
[connection signal="button_up" from="Menu/Quit" to="." method="_on_Quit_button_up"]
